--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Martin Boos <mboos@outlook.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-exrex = "^0.10.5"
+xeger = "^0.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
