--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,13 @@
 [tool.poetry]
 name = "jsonschema-instance"
 version = "0.1.0"
-description = ""
+description = "A Python package that creates default objects from a JSON schema."
+authors = ["Martin Boos <mboos@outlook.com>"]
+maintainers = ["Martin Boos <mboos@outlook.com>"]
+readme = "README.md"
+homepage = ""
+repository = "https://github.com/mnboos/jsonschema-instance"
+license = "GNU AGPL v3"
 authors = ["Martin Boos <mboos@outlook.com>"]
 
 [tool.poetry.dependencies]
