--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ xeger = "^0.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
+jsonschema = "^3.2.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
