--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ license = "GNU AGPL v3"
 python = "^3.7"
 xeger = "^0.3.5"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.4.1"
-jsonschema = "^3.2.0"
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+jsonschema = "^4.18.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
