--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ license = "GNU AGPL v3"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-xeger = "^0.3.5"
+rstr = "^3.2.1"
+loguru = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
