--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ loguru = "^0.7.0"
 pytest = "^7.4.0"
 jsonschema = "^4.18.0"
 flake8 = "^6.0.0"
+black = "^23.7.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
