--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -29,21 +29,24 @@ jobs:
       - name: Test with python ${{ matrix.python-version }}
         run: uv run --frozen task test
 
-#  publish:
-#    runs-on: ubuntu-latest
-#    if: github.event_name == 'release' && github.event.action == 'created'
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Install Python and uv
-#        uses: astral-sh/setup-uv@v5
-#        with:
-#          python-version: "3.12"
-#      - name: Install build tools
-#        run: uv pip install build twine
-#      - name: Build package
-#        run: python -m build
-#      - name: Publish to PyPI
-#        run: twine upload dist/*
-#        env:
-#          TWINE_USERNAME: __token__
-#          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+
+  publish:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Python and uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: "3.12"
+      - name: Build package
+        run: uv build
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Publish to PyPI
+        run: uv publish --username __token__ --token ${{ secrets.UV_PUBLISH_TOKEN }}
