--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -33,6 +33,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    needs:
+      - test
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
     steps:
