--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -51,4 +51,4 @@ jobs:
           name: python-package-distributions
           path: dist/
       - name: Publish to PyPI
-        run: uv publish --username __token__ --token ${{ secrets.UV_PUBLISH_TOKEN }}
+        run: uv publish --token ${{ secrets.UV_PUBLISH_TOKEN }}
