--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ maintainers = [
     {name = "Martin Boos", email = "mboos@outlook.com"},
 ]
 license = {text = "GNU AGPL v3"}
-requires-python = "<4.0,>=3.10"
+requires-python = "<4.0,>=3.9"
 name = "jsonschema-default"
 version = "1.6.1"
 description = "Create default objects from a JSON schema"
@@ -75,11 +75,11 @@ skip-magic-trailing-comma = false
 line-ending = "lf"
 
 [tool.taskipy.tasks]
-test = { cmd = "coverage run -m pytest && coverage report && coverage html", help = "Run the tests and measure coverage" }
+test = { cmd = "coverage run -m pytest && coverage html && coverage report", help = "Run the tests and measure coverage" }
 format = { cmd = "ruff check --select I --fix && ruff check --fix && ruff format", help = "Formats the code using ruff" }
 lint = { cmd = "ruff check" }
 
 [tool.coverage.report]
 skip_covered = true
 fail_under = 97
-exclude_also = []
+exclude_also = ["pass",]
