test(schemas): enable quick navigation to schema with IDE

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,9 +75,13 @@ skip-magic-trailing-comma = false
 line-ending = "lf"
 
 [tool.taskipy.tasks]
-test = { cmd = "coverage run -m pytest && coverage html && coverage report", help = "Run the tests and measure coverage" }
+test = { cmd = "uv run --directory ./tests/ coverage run -m pytest && coverage html && coverage report", help = "Run the tests and measure coverage" }
 format = { cmd = "ruff check --select I --fix && ruff check --fix && ruff format", help = "Formats the code using ruff" }
 lint = { cmd = "ruff check" }
+
+[tool.coverage.run]
+data_file = "tests/.coverage"
+branch = true
 
 [tool.coverage.report]
 skip_covered = true
