--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,20 @@ readme = "README.md"
 dependencies = [
     "rstr==3.2.2",
 ]
+keywords = [
+  "jsonschema",
+  "default-values",
+  "json-schema",
+  "schema",
+  "data-generation",
+  "json",
+  "validation",
+  "automation",
+  "structured-data",
+  "code-generation",
+  "mock-data",
+  "defaults",
+]
 
 [project.urls]
 homepage = "https://github.com/mnboos/jsonschema-default"
